Lilac: removed LociPositionFinder